--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-  background-color: lightcoral;
+body {
+  background-color: lightgray;
 }
