--- a/src/views/listUsers.ejs
+++ b/src/views/listUsers.ejs
@@ -7,6 +7,16 @@
 
     <%- include('partials/navbar.ejs') %>
 
+    <ul>
+      <% users.forEach((user) => { %>
+        <li>
+          <%= user.name %> - <%= user.email %> - Idade: <%= user.age %>
+        </li>
+      <% }) %>
+    </ul>
+     
+
+
     <%- include('partials/foot.ejs') %>
   </body>
 </html>
